force-app/main/default/objects/Brand_Insights__c/Brand_Insights__c.object-meta.xml
<CustomObject>
    <label>Brand Insights</label>
    <nameField>
        <label>Brand Insights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>