force-app/main/default/objects/Brand_Insights__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Insights</relationshipLabel>
    <relationshipName>Brand_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>