force-app/main/default/objects/Brand_Insights__c/fields/Adspend_2_years_ago__c.field-meta.xml
<CustomField>
    <fullName>Adspend_2_years_ago__c</fullName>
    <label>Adspend (2 years ago)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>