force-app/main/default/objects/Brand_Insights__c/fields/CR_Email_Summary__c.field-meta.xml
<CustomField>
    <fullName>CR_Email_Summary__c</fullName>
    <label>CR Email Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>