force-app/main/default/objects/Brand_Insights__c/fields/CR_End_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>CR_End_Month_Year__c</fullName>
    <label>CR End Month-Year</label>
    <type>Date</type>
</CustomField>