force-app/main/default/objects/Brand_Insights__c/fields/CR_On_Network__c.field-meta.xml
<CustomField>
    <fullName>CR_On_Network__c</fullName>
    <label>CR On Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>