force-app/main/default/objects/Brand_Insights__c/fields/CR_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>CR_Overall_Score__c</fullName>
    <label>CR Overall Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>