force-app/main/default/objects/Brand_Insights__c/fields/CR_Show_Watch__c.field-meta.xml
<CustomField>
    <fullName>CR_Show_Watch__c</fullName>
    <label>CR Show Watch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>