force-app/main/default/objects/Brand_Insights__c/fields/CR_Start_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>CR_Start_Month_Year__c</fullName>
    <label>CR Start Month-Year</label>
    <type>Date</type>
</CustomField>