force-app/main/default/objects/Brand_Insights__c/fields/CR_URL__c.field-meta.xml
<CustomField>
    <fullName>CR_URL__c</fullName>
    <label>CR URL</label>
    <type>Url</type>
</CustomField>