force-app/main/default/objects/Brand_Insights__c/fields/CS_Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>CS_Competitor_1__c</fullName>
    <label>CS Competitor 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>