force-app/main/default/objects/Brand_Insights__c/fields/CS_Competitor_3_Spend__c.field-meta.xml
<CustomField>
    <fullName>CS_Competitor_3_Spend__c</fullName>
    <label>CS Competitor 3 Spend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>