force-app/main/default/objects/Brand_Insights__c/fields/CS_Day_Part_2_Spend__c.field-meta.xml
<CustomField>
    <fullName>CS_Day_Part_2_Spend__c</fullName>
    <label>CS Day Part 2 Spend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>