force-app/main/default/objects/Brand_Insights__c/fields/CS_Email_Summary__c.field-meta.xml
<CustomField>
    <fullName>CS_Email_Summary__c</fullName>
    <label>CS Email Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>