force-app/main/default/objects/Brand_Insights__c/fields/CS_From_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_From_Date__c</fullName>
    <label>CS From Date</label>
    <type>Date</type>
</CustomField>