force-app/main/default/objects/Brand_Insights__c/fields/CS_Screenshot_Font__c.field-meta.xml
<CustomField>
    <fullName>CS_Screenshot_Font__c</fullName>
    <label>CS Screenshot Font</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>