force-app/main/default/objects/Brand_Insights__c/fields/CS_Show_List__c.field-meta.xml
<CustomField>
    <fullName>CS_Show_List__c</fullName>
    <label>CS Show List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>