force-app/main/default/objects/Brand_Insights__c/fields/CS_To_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_To_Date__c</fullName>
    <label>CS To Date</label>
    <type>Date</type>
</CustomField>