force-app/main/default/objects/Brand_Insights__c/fields/CS_URL__c.field-meta.xml
<CustomField>
    <fullName>CS_URL__c</fullName>
    <label>CS URL</label>
    <type>Url</type>
</CustomField>