force-app/main/default/objects/Brand_Insights__c/fields/IS_CS_Ready__c.field-meta.xml
<CustomField>
    <fullName>IS_CS_Ready__c</fullName>
    <label>IS CS Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>