force-app/main/default/objects/Brand_Insights__c/fields/Is_LAR_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_LAR_Ready__c</fullName>
    <label>Is LAR Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>