force-app/main/default/objects/Brand_Insights__c/fields/Is_RF_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_RF_Ready__c</fullName>
    <label>Is RF Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>