force-app/main/default/objects/Brand_Insights__c/fields/LAR_Email_Summary__c.field-meta.xml
<CustomField>
    <fullName>LAR_Email_Summary__c</fullName>
    <label>LAR Email Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>