force-app/main/default/objects/Brand_Insights__c/fields/LAR_From_Date__c.field-meta.xml
<CustomField>
    <fullName>LAR_From_Date__c</fullName>
    <label>LAR From Date</label>
    <type>Date</type>
</CustomField>