force-app/main/default/objects/Brand_Insights__c/fields/LAR_Look_Ahead_Period__c.field-meta.xml
<CustomField>
    <fullName>LAR_Look_Ahead_Period__c</fullName>
    <label>LAR Look Ahead Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>