force-app/main/default/objects/Brand_Insights__c/fields/LAR_Network_List__c.field-meta.xml
<CustomField>
    <fullName>LAR_Network_List__c</fullName>
    <label>LAR Network List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>