force-app/main/default/objects/Brand_Insights__c/fields/LAR_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>LAR_Report_Date__c</fullName>
    <label>LAR Report Date</label>
    <type>Date</type>
</CustomField>