force-app/main/default/objects/Brand_Insights__c/fields/LAR_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>LAR_Report_Name__c</fullName>
    <label>LAR Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>