force-app/main/default/objects/Brand_Insights__c/fields/LAR_Screenshot_Font__c.field-meta.xml
<CustomField>
    <fullName>LAR_Screenshot_Font__c</fullName>
    <label>LAR Screenshot Font</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>