force-app/main/default/objects/Brand_Insights__c/fields/LAR_To_Date__c.field-meta.xml
<CustomField>
    <fullName>LAR_To_Date__c</fullName>
    <label>LAR To Date</label>
    <type>Date</type>
</CustomField>