force-app/main/default/objects/Brand_Insights__c/fields/LAR_Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>LAR_Total_Visits__c</fullName>
    <label>LAR Total Visits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>