force-app/main/default/objects/Brand_Insights__c/fields/LAR_Unique_Visits__c.field-meta.xml
<CustomField>
    <fullName>LAR_Unique_Visits__c</fullName>
    <label>LAR Unique Visits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>