force-app/main/default/objects/Brand_Insights__c/fields/LAR_URL__c.field-meta.xml
<CustomField>
    <fullName>LAR_URL__c</fullName>
    <label>LAR URL</label>
    <type>Url</type>
</CustomField>