force-app/main/default/objects/Brand_Insights__c/fields/RF_Email_Summary_Font__c.field-meta.xml
<CustomField>
    <fullName>RF_Email_Summary_Font__c</fullName>
    <label>RF Email Summary Font</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>