force-app/main/default/objects/Brand_Insights__c/fields/RF_Exposure__c.field-meta.xml
<CustomField>
    <fullName>RF_Exposure__c</fullName>
    <label>RF Exposure %</label>
    <length>50</length>
    <type>Text</type>
</CustomField>