force-app/main/default/objects/Brand_Insights__c/fields/RF_Exposure_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RF_Exposure_Frequency__c</fullName>
    <label>RF Exposure Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>