force-app/main/default/objects/Brand_Insights__c/fields/RF_From_Date__c.field-meta.xml
<CustomField>
    <fullName>RF_From_Date__c</fullName>
    <label>RF From Date</label>
    <type>Date</type>
</CustomField>