force-app/main/default/objects/Brand_Insights__c/fields/RF_Impression_Share__c.field-meta.xml
<CustomField>
    <fullName>RF_Impression_Share__c</fullName>
    <label>RF Impression Share</label>
    <length>50</length>
    <type>Text</type>
</CustomField>