force-app/main/default/objects/Brand_Insights__c/fields/RF_Networks__c.field-meta.xml
<CustomField>
    <fullName>RF_Networks__c</fullName>
    <label>RF Networks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>