force-app/main/default/objects/Brand_Insights__c/fields/RF_Non_Exposure__c.field-meta.xml
<CustomField>
    <fullName>RF_Non_Exposure__c</fullName>
    <label>RF Non Exposure %</label>
    <length>50</length>
    <type>Text</type>
</CustomField>