force-app/main/default/objects/Brand_Insights__c/fields/RF_To_Date__c.field-meta.xml
<CustomField>
    <fullName>RF_To_Date__c</fullName>
    <label>RF To Date</label>
    <type>Date</type>
</CustomField>